# learn-cmake

./: LICENSE  README.md
01-hello-world/: CMakeLists.txt
02-miniproject/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
08-thirdparty/httplib/: CMakeLists.txt
08-thirdparty/httplib/cmake/: MyDemoConfig.cmake.in
08-thirdparty/httplib/test/: CMakeLists.txt  httptest.cpp
08-thirdparty/simple/: CMakeLists.txt
08-thirdparty/simple/src/: main.cpp
09-imshow/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json
